@@ -20,6 +20,7 @@ Import-Package: com.googlecode.concurrentlinkedhashmap,
  com.openexchange.i18n,
  com.openexchange.i18n.tools,
  com.openexchange.java,
+ com.openexchange.java.util,
  com.openexchange.log,
  com.openexchange.login,
  com.openexchange.mail,
